# tma-functions

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
my_package/: __init__.py
tests/: test_auth.py  test_hello_world.py
tma_functions/: __init__.py  auth.py
