[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tma-functions"
version = "0.1.0"
description = "Helper functions for Telegram Mini Apps."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pydantic"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "hatch>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/romankurnovskii/tma-functions"
Documentation = "https://github.com/romankurnovskii/tma-functions#readme"
Repository = "https://github.com/romankurnovskii/tma-functions.git"
Issues = "https://github.com/romankurnovskii/tma-functions/issues"

[tool.hatch.build.targets.wheel]
packages = ["tma_functions"]

[tool.ruff]
line-length = 120
target-version = "py38"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["my_package"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false 