[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tma-functions"
version = "0.1.2"
description = "Helper functions for Telegram Mini Apps."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Roman Kurnovskii" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pydantic"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "mypy>=1.16.0",
    "ruff>=0.11.13",
    "hatch>=1.14.1",
]

[project.urls]
Homepage = "https://github.com/romankurnovskii/tma-functions"
Documentation = "https://github.com/romankurnovskii/tma-functions#readme"
Repository = "https://github.com/romankurnovskii/tma-functions.git"
Issues = "https://github.com/romankurnovskii/tma-functions/issues"

[tool.hatch.build.targets.wheel]
packages = ["tma_functions"]

[tool.ruff]
line-length = 120
target-version = "py39"
lint.select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
lint.ignore = []


[tool.ruff.lint.isort]
known-first-party = ["tma-functions"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false 